# py-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yaml
source/: main.py
tests/: test_main.py
