[project]
name = ""
version = ""
description = "Python template project"
authors = [
    {name = "Kirill Lapshin", email = "example@example.com"},
]
dependencies = [
    "pytest",
    "pre-commit",
    "httpx",
    "pyright",
]

requires-python = "==3.11.4"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "jupyter",
    "python-dotenv",
]

[tool.testmon]
testmon_ignore_dependencies = true

[tool.pyright]

exclude = [
    "**/__pycache__",
    "**/mypy_cache",
    "**/pytest_cache",
    "**/ruff_cache",
    "**/scripts",
]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = false

pythonVersion = "3.11.4"
pythonPlatform = "Linux"

venvPath = "."
venv = ".venv"