[project]
name = ""
version = ""
description = "Python template project"
authors = [
    {name = "Kirill Lapshin", email = "example@example.com"},
]
dependencies = [
    "pytest",
    "pre-commit",
    "httpx",
    "pyright",
    "curio",
]

requires-python = "==3.10.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "jupyter",
    "python-dotenv",
]

[tool.testmon]
testmon_ignore_dependencies = true

[tool.pyright]

exclude = [
    "**/__pycache__",
    "**/mypy_cache",
    "**/pytest_cache",
    "**/ruff_cache",
    "**/scripts",
]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = false

pythonVersion = "3.10.11"
pythonPlatform = "Linux"

venvPath = "."
venv = ".venv"